--- a/Programmania/wwwroot/css/HamburgerMenu.css
+++ b/Programmania/wwwroot/css/HamburgerMenu.css
@@ -1,9 +1,7 @@
-
-
-@font-face {
+/*@font-face {
     font-family: 'mainFont';
     src: url("../Fonts/Font2.ttf");
-}
+}*/
 
 .header-container {
     width: 100%;
@@ -13,7 +11,6 @@
     -ms-display: flex;
     -webkit-display: flex;
     -o-display: flex;
-
     flex-direction: row;
     flex: 1 1 50.00%;
     justify-content: space-around;
@@ -28,7 +25,7 @@
     vertical-align: central;
 }
 
-.header__list{
+.header__list {
     display: flex;
     list-style: none;
     justify-content: space-between;
@@ -36,7 +33,6 @@
 
     .header__list li {
         margin-left: 50px;
-        
     }
 
 .header__link {
@@ -54,7 +50,7 @@
         border-top: 2px solid #1479c7;
     }
 
-.header__burger{
+.header__burger {
     margin-left: auto;
     margin-right: 0;
 }
