1. Added footer to every page 2. Added header. 3. Added links in Main page 4. Chaned main header image.

--- a/Programmania/Views/Home/Main.cshtml
+++ b/Programmania/Views/Home/Main.cshtml
@@ -28,7 +28,7 @@
 		
 
 	<main class="main">
-<header class="header" style="background-image: url('images/mainHeader.jpg');">
+	<header class="header" style="background-image: url('images/mainHeader.jpg');">
 		<div class="header__title">
 			Welcome to Programmania, username
 		</div>
@@ -101,174 +101,6 @@
 
 
 		<div class="courses-container" id="courses">
-			@*<h3 class="container__title">All courses</h3>
-			<div class="swiper">
-				<div class="courses swiper-container" data-aos="zoom-in" data-aos-duration="1000">
-
-					<div class="swiper-wrapper">
-						<div class="swiper-slide">
-							<div class="course">
-								<div class="course__image" style="background-image: url('images/CSharp.jpg');">
-								</div>
-								<div class="course-content">
-									<h3 class="course__title">
-										C#
-									</h3>
-									<p class="course__info">
-										Lessons count: 77/100
-									</p>
-
-									<div class="course__percent">
-										<div class="ldBar label-center" data-preset="circle" data-value="77"
-											data-transition-in="1000" style="width: 100%; height: 100%">
-										</div>
-									</div>
-
-									<a href="#">
-										<div class="course__button">
-											Last lesson: Working with sockets
-										</div>
-									</a>
-
-								</div>
-
-							</div>
-						</div>
-
-						<div class="swiper-slide">
-							<div class="course">
-								<div class="course__image" style="background-image: url('images/javaCourse.jpg');">
-								</div>
-								<div class="course-content">
-									<h3 class="course__title">
-										Java
-									</h3>
-									<p class="course__info">
-										Lessons count: 77/100
-									</p>
-
-									<div class="course__percent">
-										<div class="ldBar label-center" data-preset="circle" data-value="77"
-											data-transition-in="1000" style="width: 100%; height: 100%">
-										</div>
-									</div>
-
-									<div class="course__button">
-										Last lesson: Working with sockets
-									</div>
-								</div>
-
-							</div>
-						</div>
-
-						<div class="swiper-slide">
-							<div class="course">
-								<div class="course__image" style="background-image: url('images/JSLogo.png');">
-								</div>
-								<div class="course-content">
-									<h3 class="course__title">
-										JavaScript
-									</h3>
-									<p class="course__info">
-										Lessons count: 77/100
-									</p>
-
-									<div class="course__percent">
-										<div class="ldBar label-center" data-preset="circle" data-value="77"
-											data-transition-in="1000" style="width: 100%; height: 100%">
-										</div>
-									</div>
-
-									<div class="course__button">
-										Last lesson: Working with sockets
-									</div>
-								</div>
-
-							</div>
-						</div>
-
-						<div class="swiper-slide">
-							<div class="course">
-								<div class="course__image" style="background-image: url('images/phpCourse.jpg');">
-								</div>
-								<div class="course-content">
-									<h3 class="course__title">
-										PHP
-									</h3>
-									<p class="course__info">
-										Lessons count: 77/100
-									</p>
-
-									<div class="course__percent">
-										<div class="ldBar label-center" data-preset="circle" data-value="77"
-											data-transition-in="1000" style="width: 100%; height: 100%">
-										</div>
-									</div>
-
-									<div class="course__button">
-										Last lesson: Working with sockets
-									</div>
-								</div>
-
-							</div>
-						</div>
-
-						<div class="swiper-slide">
-							<div class="course">
-								<div class="course__image" style="background-image: url('images/rubyCourse.png');">
-								</div>
-								<div class="course-content">
-									<h3 class="course__title">
-										Ruby
-									</h3>
-									<p class="course__info">
-										Lessons count: 77/100
-									</p>
-
-									<div class="course__percent">
-										<div class="ldBar label-center" data-preset="circle" data-value="77"
-											data-transition-in="1000" style="width: 100%; height: 100%">
-										</div>
-									</div>
-
-									<div class="course__button">
-										Last lesson: Working with sockets
-									</div>
-								</div>
-
-							</div>
-						</div>
-
-						<div class="swiper-slide">
-							<div class="course">
-								<div class="course__image" style="background-image: url('images/pythonCourse.png');">
-								</div>
-								<div class="course-content">
-									<h3 class="course__title">
-										Python
-									</h3>
-									<p class="course__info">
-										Lessons count: 77/100
-									</p>
-
-									<div class="course__percent">
-										<div class="ldBar label-center" data-preset="circle" data-value="77"
-											data-transition-in="1000" style="width: 100%; height: 100%">
-										</div>
-									</div>
-
-									<div class="course__button">
-										Last lesson: Working with sockets
-									</div>
-								</div>
-
-							</div>
-						</div>
-					</div>
-					<div class="swiper-button-prev"></div>
-					<div class="swiper-button-next"></div>
-				</div>
-			</div>*@
 
 
 			<div class="swiper">
@@ -287,7 +119,9 @@
 							</div>
 
 							<div class="course__button button_ruby">
-								Go to course
+								<a href="Courses">
+									Go to course
+								</a>
 							</div>
 						</div>
 
@@ -317,7 +151,9 @@
 							</div>
 
 							<div class="course__button button_cpp">
-								Go to course
+								<a href="Courses">
+									Go to course
+								</a>
 							</div>
 						</div>
 
@@ -346,7 +182,9 @@
 							</div>
 
 							<div class="course__button button_php">
-								Go to course
+								<a href="Courses">
+									Go to course
+								</a>
 							</div>
 						</div>
 						<div class="flip">
@@ -405,7 +243,7 @@
 
 
 		<div class="challenges-container" id="challenges">
-			<h3 class="container__title">Challenges</h3>
+			<a href="Challenges" class="container__title title_link">Challenges</a>
 			<div class="challenges" data-aos="zoom-in" data-aos-duration="1000">
 
 				<h3 class="winrate__info">Games win: 7/10</h3>
