--- a/Programmania/Views/Home/Challenges.cshtml
+++ b/Programmania/Views/Home/Challenges.cshtml
@@ -22,7 +22,7 @@
 </head>
 
 <body>
-	<header class="header">
+<header class="header">
         <div class="header-container">
             <div class="container__text">Programmania</div>
             <div class="header__burger">
@@ -40,7 +40,7 @@
                         </li>
 
                         <li>
-                            <a href="News" class="header__link">News</a>
+                            <a href="Performance" class="header__link">Performance</a>
                         </li>
 
                         <li>
