--- a/Programmania/wwwroot/css/Footer.css
+++ b/Programmania/wwwroot/css/Footer.css
@@ -1,4 +1,13 @@
-﻿.footer {
+﻿.wrapper{
+    display: flex;
+    flex-direction: column;
+}
+
+.main{
+    flex: 1 1 auto;
+}
+
+.footer {
     background-color: #f5f5f5;
     padding: 30px;
     width: 100%;
