1. Changed end test button in challenge page 2. Added answers navigation in challenge page

--- a/Programmania/Views/Home/Challenge.cshtml
+++ b/Programmania/Views/Home/Challenge.cshtml
@@ -33,7 +33,28 @@
 		</header>
 
 		<main class="main">
+			<div class="answers-nav">
+				<a>
+					<div class="btn__next answer_choose"></div>
+				</a>
+				<a>
+					<div class="btn__next answer_choose"></div>
+				</a>
+				<a>
+					<div class="btn__next answer_unchoose"></div>
+				</a>
+				<a>
+					<div class="btn__next answer_unchoose"></div>
+				</a>
+				<a>
+					<div class="btn__next answer_unchoose"></div>
+				</a>
+				<a>
+					<div class="btn__next answer_choose"></div>
+				</a>
+				</div>
 			<div class="content">
+				
 				<div class="question">
 					<h2 class="question__title">Question:</h2>
 					<h3 class="question__text"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore
@@ -68,8 +89,6 @@
 					</div>
 
 					<div class="buttons">
-						<div class="btn__submit">Submit</div>
-
 						<div class="btn__arrows">
 							<div class="btn__prev"></div>
 							<div class="btn__next"></div>
@@ -86,6 +105,18 @@
 					<div class="statistic-block block_time">
 						<h3 class="statistic-block__title">Time left: </h3>
 						<h5 class="statistic-block__text" id="timer-show">01:30</h5>
+					</div>
+
+					<div class="statistic-block block_end" style="">
+						<div class="flip">
+							<div class="flip__front">
+								<h3>End test</h3>
+							</div>
+
+							<div class="flip__back">
+								<h3>If you end the test, you can't return to your answers</h3>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
