1. Deleted zeroing and fonts from styles. Now it links to html file (zeroing.css and fonts.css) 2. Changed answers navigation view. 3. Added two scripts for saving and loading user answer.

--- a/Programmania/Views/Course/Disciplines.cshtml
+++ b/Programmania/Views/Course/Disciplines.cshtml
@@ -9,6 +9,8 @@
     <script src="~/js/loading-bar.min.js"></script>
     <link rel="stylesheet" href="~/css/loading-bar.min.css" />
     <link rel="stylesheet" href="~/css/Disciplines.css">
+        <link rel="stylesheet" href="~/css/util/zeroing.css" />
+    <link rel="stylesheet" href="~/css/util/fonts.css" />
     <link rel="stylesheet" href="~/css/Footer.css" />
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
