--- a/Programmania/Views/Home/News.cshtml
+++ b/Programmania/Views/Home/News.cshtml
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width">
 
     <link rel="stylesheet" href="~/css/HamburgerMenu.css">
+    <link rel="stylesheet" href="~/css/util/zeroing.css" />
+    <link rel="stylesheet" href="~/css/util/forms.css" />
     <link rel="stylesheet" href="~/css/News.css">
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
