--- a/Programmania/Views/Course/Courses.cshtml
+++ b/Programmania/Views/Course/Courses.cshtml
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="~/css/HamburgerMenu.css" />
     <link rel="stylesheet" href="~/css/Courses.css" />
+    <link rel="stylesheet" href="~/css/util/zeroing.css" />
+    <link rel="stylesheet" href="~/css/util/fonts.css" />
     <link rel="stylesheet" href="~/css/Footer.css" />
 
     <link rel="stylesheet" href="~/css/loading-bar.min.css" />
