--- a/Programmania/Views/Course/Lessons.cshtml
+++ b/Programmania/Views/Course/Lessons.cshtml
@@ -8,6 +8,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <link rel="stylesheet" href="~/css/Lessons.css" />
+    <link rel="stylesheet" href="~/css/util/zeroing.css" />
+    <link rel="stylesheet" href="~/css/util/fonts.css" />
 
     <link rel="stylesheet" href="~/css/highlight styles/paraiso-dark.min.css" />
     <script src="~/js/highlight.min.js"></script>
