--- a/Programmania/Views/Home/Challenges.cshtml
+++ b/Programmania/Views/Home/Challenges.cshtml
@@ -8,6 +8,9 @@
 	<link rel="stylesheet" href="~/css/loading-bar.min.css">
 	<script src="~/js/loading-bar.min.js"></script>
 	<link rel="stylesheet" href="~/css/bulma.min.css">
+	    <link rel="stylesheet" href="~/css/util/zeroing.css" />
+    <link rel="stylesheet" href="~/css/util/fonts.css" />
+
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 
 	<link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
