--- a/Programmania/Views/Home/Index.cshtml
+++ b/Programmania/Views/Home/Index.cshtml
@@ -13,12 +13,12 @@
     <link rel="stylesheet" href="~/css/Index.css" />
     <link rel="stylesheet" href="~/css/Footer.css" />
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" />
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js"></script>
-
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
             integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
             crossorigin="anonymous"></script>
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" />
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>
 
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
@@ -186,10 +186,10 @@
                         <div class="form-group">
                             <label id="avatarLabelReg" class="modal__label">Avatar: </label>
                             <p class="error"></p>
-                            <input id="avatarInputReg" type="file" class="form-control modal__input" />
+                            <input id="avatarInputReg" type="file" class="form-control modal__input"/>
                         </div>
 
-                        <input type="button" id="registerBtnOut" class="btn btn-danger modal__close" name="registerBtn" value="Register" />
+                        <input type="button" id="registerBtnOut" class="btn btn-danger modal__btn" name="registerBtn" value="Register" />
                         <p class="error"></p>
                     </form>
                 </div>
@@ -212,7 +212,7 @@
                             <input id="passwordInputLog" type="password" class="form-control modal__input" placeholder="password" name="passwordInput" />
                         </div>
 
-                        <input type="button" id="loginBtnOut" class="btn btn-success" name="loginBtn" value="Login" />
+                        <input type="button" id="loginBtnOut" class="btn btn-success modal__btn" name="loginBtn" value="Login" />
                         <p class="error"></p>
                     </form>
                 </div>
