--- a/Programmania/Views/Home/Main.cshtml
+++ b/Programmania/Views/Home/Main.cshtml
@@ -5,6 +5,8 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="~/css/Main.css" />
+	<link rel="stylesheet" href="~/css/util/zeroing.css" />
+    <link rel="stylesheet" href="~/css/util/fonts.css" />
 	<link rel="stylesheet" href="~/css/Footer.css" />
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.5.1/chart.min.js"></script>
 	<link rel="stylesheet" href="~/css/loading-bar.min.css">
