--- a/Programmania/Views/Home/Performance.cshtml
+++ b/Programmania/Views/Home/Performance.cshtml
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="~/css/nice-select2.css" />
     <script src="~/js/nice-select2.js"></script>
     <link rel="stylesheet" href="~/css/Footer.css"/>
+    <link rel="stylesheet" href="~/css/util/zeroing.css" />
+    <link rel="stylesheet" href="~/css/util/forms.css" />
     <link rel="stylesheet" href="~/css/HamburgerMenu.css" />
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.5.1/chart.min.js"></script>
