--- a/Programmania/wwwroot/css/Lessons.css
+++ b/Programmania/wwwroot/css/Lessons.css
@@ -1,108 +1,4 @@
-﻿/*Обнуление*/
-* {
-    padding: 0;
-    margin: 0;
-    border: 0;
-}
-
-    *, *:before, *:after {
-        -moz-box-sizing: border-box;
-        -webkit-box-sizing: border-box;
-        box-sizing: border-box;
-    }
-
-:focus, :active {
-    outline: none;
-}
-
-a:focus, a:active {
-    outline: none !important;
-}
-
-nav, footer, header, aside {
-    display: block;
-}
-
-html, body {
-    height: 100%;
-    width: 100%;
-    font-size: 100%;
-    line-height: 1;
-    font-size: 14px;
-    -ms-text-size-adjust: 100%;
-    -moz-text-size-adjust: 100%;
-    -webkit-text-size-adjust: 100%;
-}
-
-input, button, textarea {
-    font-family: inherit;
-}
-
-    input::-ms-clear {
-        display: none;
-    }
-
-button {
-    cursor: pointer;
-}
-
-    button::-moz-focus-inner {
-        padding: 0;
-        border: 0;
-    }
-
-a, a:visited {
-    text-decoration: none !important;
-    color: #000 !important;
-}
-
-    a:hover {
-        text-decoration: none !important;
-    }
-
-ul-li {
-    list-style: none;
-}
-
-img {
-    vertical-align: top;
-}
-
-h1, h2, h3, h4, h5, h6 {
-    font-size: inherit;
-    font-weight: 400;
-}
-
-/*----------------------------*/
-@font-face {
-    font-family: "Monsterrat-thin";
-    src: url("../fonts/Montserrat-Thin.ttf") format('truetype');
-    font-style: normal;
-    font-weight: normal;
-}
-
-@font-face {
-    font-family: "Monsterrat-light";
-    src: url("../fonts/Montserrat-Light.ttf") format('truetype');
-    font-style: normal;
-    font-weight: normal;
-}
-
-@font-face {
-    font-family: "Monsterrat-normal";
-    src: url("../fonts/Montserrat-Regular.ttf");
-    font-style: normal;
-    font-weight: normal;
-}
-
-@font-face {
-    font-family: "Monsterrat-bold";
-    src: url("../fonts/Montserrat-Bold.ttf");
-    font-style: normal;
-    font-weight: normal;
-}
-
-.header {
+﻿.header {
     width: 100%;
     height: 150px;
     display: flex;
