--- a/Programmania/wwwroot/css/components/modal.css
+++ b/Programmania/wwwroot/css/components/modal.css
@@ -23,7 +23,8 @@
     font-size: 3vh;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
     animation-name: animatetop;
-    animation-duration: 0.4s
+    animation-duration: 0.4s;
+    height: 100%;
 }
 
 .modal__label {
@@ -63,6 +64,12 @@
         text-decoration: none;
         cursor: pointer;
     }
+
+.modal__btn{
+    width: 100% !important;
+    font-size: 0.8em !important;
+    margin-top: 10px !important;
+}
 
 @keyframes animatetop {
     from {
