--- a/Programmania/wwwroot/css/Main.css
+++ b/Programmania/wwwroot/css/Main.css
@@ -1,5 +1,6 @@
 html, body {
     height: 100%;
+    scroll-behavior: smooth;
 }
 
 .wrapper {
@@ -173,7 +174,6 @@ html, body {
 }
 
 .current-course-container {
-    background-color: #f5faff;
     min-height: 300px;
     margin: 0;
     padding: 50px 0;
@@ -184,6 +184,7 @@ html, body {
     font-size: 2.8em;
     font-weight: 700;
     font-family: "monsterrat-thin";
+    margin-bottom:20px;
 }
 
 .title_link {
@@ -308,7 +309,6 @@ body {
 }
 
 
-
 .course__info {
     display: flex;
     flex-direction: row;
@@ -420,10 +420,78 @@ body {
 .flip {
     margin-left: 50px;
     width: 50%;
-    height: 700px;
+    height: 400px;
     transform: skew(-10deg, 0);
     transition: all 0.3s ease 0s;
 }
+.flip_right {
+    transform: skew(10deg, 0) !important;
+    height: 400px;
+    width: 40%;
+}
+
+.swiper-button-prev {
+    width: 50px !important;
+    height: 50px !important;
+    background: #fff !important;
+    border: 2px solid #66a8ff !important;
+    border-radius: 50% !important;
+    color: #66a8ff !important;
+    cursor: pointer !important;
+    line-height: 100px !important;
+    transition: all 0.5s ease 0s !important;
+}
+    .swiper-button-prev:hover {
+        background: #66a8ff !important;
+        border-color: #66a8ff !important;
+        color: #fff !important;
+    }
+    .swiper-button-prev::after {
+        position: absolute !important;
+        display: inline-block !important;
+        content: "" !important;
+        width: 12.5px !important;
+        height: 12.5px !important;
+        top: 50% !important;
+        left: 50% !important;
+        margin-left: -6px !important;
+        margin-top: -6px !important;
+        border-bottom: 2px solid !important;
+        border-right: 2px solid !important; 
+        transform: rotateZ(135deg) !important;
+    }
+
+.swiper-button-next {
+    width: 50px !important;
+    height: 50px !important;
+    background: #fff !important;
+    border: 2px solid #66a8ff !important;
+    border-radius: 50% !important;
+    color: #66a8ff !important;
+    cursor: pointer !important;
+    line-height: 100px !important;
+    
+    transition: all 0.5s ease 0s !important;
+}
+    .swiper-button-next:hover {
+        background: #66a8ff !important;
+        border-color: #66a8ff !important;
+        color: #fff !important;
+    }
+    .swiper-button-next::after {
+        position: absolute !important;
+        display: inline-block !important;
+        content: "" !important;
+        width: 12.5px !important;
+        height: 12.5px !important;
+        top: 50% !important;
+        left: 50% !important;
+        margin-left: -10px !important;
+        margin-top: -6px !important;
+        border-bottom: 2px solid !important;
+        border-right: 2px solid !important;
+        transform: rotateZ(-45deg) !important;
+    }
 
 .flip__front {
     backface-visibility: hidden;
@@ -533,6 +601,7 @@ body {
     padding: 50px 0;
 }
 
+
 .challenges {
     padding: 0;
 }
@@ -576,7 +645,51 @@ body {
     border-radius: 20px;
     margin: 0 auto;
     box-shadow: 0px 8px 24px 4px rgba(174, 174, 192, 0.3), 0px 4px 12px 2px rgba(174, 174, 192, 0.3) !important;
+    position: relative;
 }
+
+.challenge-front {
+    backface-visibility: hidden;
+    transition: all 0.5s ease 0s;
+}
+
+.challenge-back {
+    backface-visibility: hidden;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: all 0.5s ease 0s;
+    transform: rotateX(180deg);
+}
+    .challenge-back h3 {
+        font-size: 40px;
+        text-align: center;
+        font-family: monsterrat-bold;
+        line-height: 60px;
+    }
+
+.challenge-back_create {
+    background-color: #bbffba;
+    color: #028a00;
+}
+.challenge-back_accept {
+    background-color: #ffbaba;
+    color: #8a0000;
+}
+
+.challenge:hover .challenge-front{
+    transform: rotateX(180deg);
+}
+.challenge:hover .challenge-back{
+    transform: rotateX(360deg);
+}
+
 
 .challenges-swiper {
     padding: 30px;
@@ -630,6 +743,7 @@ body {
     color: #002c8a;
     font-family: "monsterrat-normal";
     font-size: 2em;
+    margin-top: 50px;
 }
 
 .challenge__info {
@@ -637,6 +751,7 @@ body {
     color: #002c8a;
     font-family: "monsterrat-light";
     font-size: 2.5vh;
+    margin-top: 50px;
 }
 
 .challenge__button {
@@ -842,7 +957,7 @@ body {
         margin-top: 30px;
         width: 100%;
         height: 400px;
-        transform: none;
+        transform: none !important;
     }
     .flip__back{
         width: auto;
