--- a/Programmania/Views/Course/Disciplines.cshtml
+++ b/Programmania/Views/Course/Disciplines.cshtml
@@ -91,6 +91,6 @@
         AOS.init();
     </script>
 
-@*    <script ript type="text/javascript" src="~/js/disciplines.js"></script>*@
+    <script ript type="text/javascript" src="~/js/disciplines.js"></script>
 </body>
 </html>
